FIX: z-index for button close in lightbox changed on mobile

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -660,7 +660,7 @@
         width: 54px;
         height: 44px;
         padding: 0;
-        z-index: 15;
+        z-index: 100;
         opacity: 0;
       }
 
